hphp/hack/test/typecheck/expression_trees/splice2.php.like_types.exp
File "splice2.php", line 25, characters 8-31:
Expected `ExprTree<[unresolved], [unresolved], [unresolved]>` because this is being spliced into another Expression Tree (Typing[4110])
  File "splice2.php", line 20, characters 25-53:
  But got `dynamic` because it is an unenforceable type
